Categories card layout bug fixed

--- a/src/app/components/category-card/category-card.component.scss
+++ b/src/app/components/category-card/category-card.component.scss
@@ -1,4 +1,4 @@
-.card{
+.card {
   width: 5.5em;
   height: 5.5em;
 
@@ -11,35 +11,49 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: .1em;
+  padding: 0.1em;
   box-shadow: 0px 0px 2px gray;
-  gap: .5em;
+  gap: 0.5em;
   position: relative;
-  overflow: hidden !important;
+  overflow: visible !important;
 
-  .image{
-    height: 100%;
+  .image {
+    height: 3em;
+
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    img{
+      height: 3em !important;
+      max-height: 3em !important;
+    }
   }
 
-  img:not(#remove){
-    border-radius: 10px;
-    max-width: 3em;
-    max-height: 3em;
+  // img:not(#remove) {
+  //   border-radius: 10px;
+  //   max-width: 3em;
+  //   max-height: 3em;
+  // }
+
+  .text {
+    width: 100%;
+    overflow: hidden;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    span {
+      margin-bottom: 0.5em;
+      overflow-wrap: normal;
+    }
   }
 
-  span{
-    margin-bottom: .5em;
-  }
-
-  #remove{
-    position:absolute !important;
+  #remove {
+    z-index: 10 !important;
+    position: absolute !important;
     bottom: -20% !important;
     right: -20% !important;
     width: 2em;
   }
 }
-
